--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ author: "范晓太，赵鹏"
 site: bookdown::bookdown_site
 date: "`r Sys.Date()`"
 description: "This is a collection of stories of high-school students taught by Mr. Fan Xiaotai. "
-github-repo: "dapengde/qunyingpu"
+github-repo: "pzhaonet/qunyingpu"
 cover-image: "images/cover.jpg"
 url: 'https\://bookdown.org/baydap/qyp/'
 documentclass: ctexbook
@@ -1178,6 +1178,75 @@ geometry: [b5paper, tmargin=2.5cm, bmargin=2.5cm, lmargin=3.5cm, rmargin=2.5cm]
   这位男性老师，叫范晓太。
 
   2017、3、29
+
+# 酷毙了的皮尔扎提 {#pierzhati .unnumbered}}
+
+
+  先看我手头的一帧照片。
+
+  标致的身段，挺拔的腰肢；冷峻而不失柔和的面容，浅淡而饱含深意的笑影；双手抱于胸前，两腿自然分开；左脚向前迈出半步，身体的重心后移于右腿之上。经冬不凋的翠竹，映衬着少年坚强不屈的斗志；迎春而绿的柳丝，昭示着主人翁上下求索的理想。一泓储蓄着深情厚谊的春水，悄悄地漾起锦缎似的涟漪，把湛蓝的天空摇曳得分外妖娆。
+
+垂涎了吗？眼红了吗？跺脚了吗？羡慕嫉妒恨，天上一朵云。风来云飞无踪迹，雨过又现星斗群。星斗群，两光盘，昼夜轮流把好关。山自青来水自流，花开叶落不须愁。
+
+  云话说不完，暂停到眼前。
+
+  照片上的男孩儿，名叫皮尔扎提，维吾尔族；郑州十一中1916班的优秀民族生；身高180有余，戴一副一度象征知识与学问的、度数不算很高的眼镜。至此，你是否想起了“修八尺有余，而形貌昳丽”的邹忌？就是那个帮助齐威王“战胜于朝廷”的邹忌？你上过初中木有？初中毕业生都知道的呀。想起来了？真聪明！
+
+自古以来，颜值，始终是衡量一个人品质的好与坏，能力的大与小，智商的高与低，甚至产生影响的深浅与远近等等多方多面的重要参考数据。特别是近几年来，人们的生活水平显著提高，欣赏水平也蹭蹭地跟着往上升，“小鲜肉”们应运而生，如“雨后春笋”，赛过江之鲫，胜开闸之水，让人应接不暇，头晕目眩，胆战心惊。
+
+但是，千篇一律，千人一面，千曲一腔，再无节操的审美也会疲劳的。终究会有一天，返璞归真成为不可逆转的大趋势，崇尚原生态成为时尚追求且为唯一法则。届时，林林总总的美容院，甚或千千万万的养颜品，都将一如落潮之汐瞬间退出历史舞台。滩涂上，满目疮痍，触目惊心。方知所谓美的追求实乃恶之创造者也，怎不痛心疾首，扼腕顿足乎？
+
+2300多年前的邹忌，虽有颜值却摈弃之，凭借高屋建瓴的智慧和苦心孤诣的策略，规谏国王不穷兵黩武，不劳民伤财；只广开言路，知错就改之一举措，就轻而易举地实现国泰民安，国富民强之目的，不可谓不圣人也。
+
+2300多年后的皮尔扎提，同样拥有令人垂涎的天然颜值，同样义无反顾地摈弃之，凭借着新世纪人类的别样追寻的特质，和自身与生俱来的建造幸福花园的梦想，不远千里，不惧劳苦，一头扎进中原大地的怀抱，吮吸着华夏民族五千年文明的乳汁，在世界民族共同创造的知识和文化的海洋里蛙泳，蝶泳，自由泳，不拘一格，尽情地遨游。不可谓不神人也。
+
+  “没有梦想，又何必步足远方。踏上求学的遥遥之路，背上远行的行囊，或许从未想过回头。汗水，努力，刻苦，认真，一切都不会白费。我相信，终有一天，雏鹰会长大，会在天空自由地飞翔。”
+
+“最美学生”的推荐词里，既有对皮尔扎提当下脚踏实地目不窥园精神的褒奖，又有对皮尔扎提将来必定会成就梦想的由衷祝愿。其中的情谊，非同窗挚友不能具有。
+
+端详久了，你会感觉，照片里的皮尔扎提颇有些“傲”，就像班级口号所喊的“出水蛟龙”，“傲视群雄”；其实，现实生活中的他，却是一个不折不扣，地地道道，常把羞涩挂在脸上，静如处子的男孩儿。“虽怒时而若笑，即瞋视而有情。”从他身上，多多少少的可以看到贾宝玉的影子，却没有贾宝玉一丝一毫的骄纵与骄横。
+
+我在写给皮尔扎提的生日小诗里说：皮尔扎提帅帅呆，春风拂面晕红腮。高歌一曲长天阔，水也欢呼云也开。前两句说他的羞赧，后两句说他的未来。其中的寓意，不用多说，同学们都能明白，是谓心有灵犀者也。
+
+                                                       2017、3、31
+
+# 摘一朵晚霞 -- 告 1916 班全体同学书（九） {#letter9 .unnumbered} 
+
+ 黄昏，落日将河水染成绯红，流动的绯红把栅栏上的蔷薇惊醒，锦簇的花团盛情留下了瑰丽的晚霞。蜂儿，蝶儿，通过疯狂地PARTY，营造着浓郁的芳香。
+
+ 
+
+摘一朵晚霞，牢牢地别在课桌的书山上。
+
+从此，书山上就多了一道明丽的风景，让不畏艰险勇于攀登的人们，在奋力之余，放松一下紧绷着的心弦。他们可以极目远眺，展望未来，再绘蓝图；也可以划然长啸，抒发久贮于胸中的豪情，向这斑斓的世界宣布：“有我，你会更精彩！”
+
+或者，伸出坚实强壮的臂膊来，将布满茧子的手掌轻轻地展开，使连心的十指尽情地拉长，延伸，直到酸麻，胀痛，僵硬。然后收势，悄悄地放进晚霞的怀抱，在这个绚烂而又温暖的区间，让疲惫的心灵做一个小幅度的转动，慢慢的，缓缓的，只有自己知道在动，也只有自己感觉在动。而他人却根本无法觉察；就连空气也惊诧于你的定力，你的魔力，你的张力。上山途中的一道道坎儿，一坡坡断崖，变得风韵十足，仪态万方，值得拥有，值得回味。每当咀嚼时，顿生三生三世难离弃的满足感。
+
+摘一朵晚霞，紧紧地贴在娇嫩的脸庞上。
+
+从此，脸庞上又多了一层明媚的色彩，让每一天的清晨，都能够迎着朝阳的光芒和热度，开始崭新的24小时不间断的高效率运转。其实，朝云与晚霞原本没有什么区别，只是时间差或地域异而导致的不同滋味的体验。很可能你看到的朝云恰是别人眼中的晚霞。
+
+即便是二者被习惯地区别对待的理念根深蒂固，无法改变，那么，它们所担当的角色与表现的意义，则是每一时每一刻都在发挥着不可替代的作用。就像地球，——地球太大了，有些抽象，我们就看地球仪吧。东半球与西半球，南极与北极，你说哪个地方的哪个位置最好？或许仁者见仁，智者见智，但是，换个角度看问题，事物的形状甚至性质都会发生改变。这也就是为什么达芬奇十年画一蛋的奥秘之所在。
+
+晚霞的温度从心理感觉上似乎不如朝云炽热，可是绚丽的程度一点也不逊色。而且，东西两极，遥相呼应，共同构成了世界奇观之美妙。一旦二者融为一体，所产生的观赏价值和功用价值，是否可以彻底改变旧有的桎梏，翻新出愈奇愈丽愈丽愈痴的历史意义和现实意义？晚霞贴在了娇嫩的脸庞，新的时代就要开启。
+
+摘一朵晚霞，端端正正地佩戴在挺拔的胸膛前。
+
+从此，胸膛中就增添了一份明达的激情。无论风云如何变幻，一颗红心永向前的执着是不会动摇、不会更改的。就像向日葵，就像指南针，就像我们的梦里追寻。大山大川的凶险，更加激发我们的战斗豪情。在通往梦想成功的征途上，没有退路可选择，没有理由可退缩。前进，只有前进，才是唯一的出路。向前，向前，只有向前，才能到达光明的彼岸，才能拯救不屈的魂灵。
+
+韦编三绝，目不窥园，优秀的传统薪火相传。时间的砥砺，使剑锋的韧度和刚性愈加强大。大灾大难的摧残，更加激励我们去战斗。呼啸的风，怒吼的浪，是我们发起冲锋的号角。旷野的喧嚣，长空的静谧，是我们排忧解难的态度。
+
+风声雨声读书声，家事国事天下事。没有我们不感兴趣的现象，更没有我们不存乎心底的事物。从生到死，从枯到荣，生生不息的坚强，漫漫征途的求索，反复证明了一件事，一个道理：热爱生命，创造生活。
+
+摘一朵晚霞，勤勤恳恳地栽种在作业本子里。
+
+从此，作业本就又开辟了一抹明艳的天空。湛湛苍穹，朵朵白云，历史的胶片无声无息地流转，格物的脚步有始有终地践行。这一抹天空，就像同行路上的知心伙伴，就像崎岖山涧的一挂瀑布，就像迷茫途中的一座灯塔，心田的温暖，心灵的慰藉，心神的招引，心心相印，息息相通。
+
+疲惫时，就往前翻几页，看看留下的脚印，无论曲与直，也无所谓深与浅，规则与否的痕迹，证明了我们曾经跋涉过的艰辛与快乐，承载着我们曾经历练过的痛苦和幸福。那一行行娟秀抑或草率的字迹，那一幅幅精美抑或揪心的图画，那一道道无限延伸的难题和异趣，那一页页贮存着情思飞扬的梦想，吸纳了晚霞，融会了晚霞，又缔造了一个个惊心动魄扣人心弦的童话。
+
+无限好的夕阳把最为光彩的容颜毫无保留地献给了依依惜别的世界，我们就把这份恋恋不舍的情怀尽情地演义出更为绚丽多彩的华章。
+
+                   2017、5、1
 
 
 # (PART) 群英谱续编{#qyp .unnumbered} 
