--- a/latex/before_body.tex
+++ b/latex/before_body.tex
@@ -1,3 +1,7 @@
+\begin{titlepage}
+    \centering
+    \includegraphics[width=\textwidth]{images/cover.pdf}
+\end{titlepage}
 
 \thispagestyle{empty}
 
