--- a/latex/template.tex
+++ b/latex/template.tex
@@ -216,9 +216,9 @@ $endif$
 \date{$date$}
 
 \begin{document}
-$if(title)$
-\maketitle
-$endif$
+%$if(title)$
+%\maketitle
+%$endif$
 $if(abstract)$
 \begin{abstract}
 $abstract$
